--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     tools:context="com.example.android.myportfolio.MainActivity"
     tools:showIn="@layout/activity_main">
 
-
+    <!--new layout for the app-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
