--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--changed RelativeLayout to ScrollView to prevent content overflow in menu-->
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,11 +11,13 @@
     tools:showIn="@layout/activity_main">
 
     <!--new layout for the app-->
+    <!--changed the colors for the layout and button to use colors.xml for code reusable! -->
+    <!--xml style 속성도 override 기능을 가지고있다 틀을 상속받고 세부는 조절가능!-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#E0E0E0"
+        android:background="@color/colorMainLayoutBackGround"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true">
@@ -31,90 +34,53 @@
             android:textSize="25dp"
             android:textColor="#000000"/>
 
+        <!--load button style resources-->
         <Button
+            style="@style/appButton"
             android:id="@+id/spotifyStreamer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="SPOTIFY STREAMER"
-            android:textSize="17dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:background="#FF9800"
+            android:onClick="clickOnSpotify"
+            android:text="@string/spotifyButton"
+            android:layout_marginTop="50dp"
             />
 
         <Button
+            style="@style/appButton"
             android:id="@+id/scoresApp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="SCORES APP"
-            android:textSize="17dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:background="#FF9800"
+            android:onClick="clickOnScores"
+            android:text="@string/scoresButton"
             />
 
         <Button
+            style="@style/appButton"
             android:id="@+id/libraryApp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="LIBRARY APP"
-            android:textSize="17dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:background="#FF9800"
+            android:onClick="clickOnLibrary"
+            android:text="@string/libraryButton"
+
             />
 
         <Button
+            style="@style/appButton"
             android:id="@+id/buildItbigger"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="BUILD IT BIGGER"
-            android:textSize="17dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:background="#FF9800"
+            android:onClick="clickOnBuildIt"
+            android:text="@string/buildItButton"
+
             />
 
         <Button
+            style="@style/appButton"
             android:id="@+id/xyzReader"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="XYZ READER"
-            android:textSize="17dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:background="#FF9800"
+            android:onClick="clickOnXyzReader"
+            android:text="@string/xyzButton"
+
             />
 
         <Button
+            style="@style/appButton"
             android:id="@+id/capStone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="CAPSTONE: MY OWN APP"
-            android:textSize="17dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:background="#1DE9B6"
+            android:text="@string/capStoneButton"
+            android:background="@color/colorCapStoneButton"
             />
 
 
     </LinearLayout>
-</RelativeLayout>
+</ScrollView>
